src-tauri/build_errors.txt
    Checking default v0.1.0 (C:\projects\weatherlight\src-tauri)
warning: unused import: `crate::models::WeatherState`
 --> src\tray.rs:5:5
  |
5 | use crate::models::WeatherState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no function or associated item named `from_bytes` found for struct `Image<'a>` in the current scope
  --> src\tray.rs:21:37
   |
21 |     let icon = tauri::image::Image::from_bytes(include_bytes!("../icons/icon.png")).unwrap_or_else(|_| tauri::image::Image::new_owned(vec...
   |                                     ^^^^^^^^^^ function or associated item not found in `Image<'_>`
   |
note: if you're trying to build a new `Image<'_>` consider using one of the following associated functions:
      Image::<'static>::new_owned
      Image::<'a>::new
  --> C:\Users\jonsk\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\image\mod.rs:52:3
   |
52 |   pub const fn new_owned(rgba: Vec<u8>, width: u32, height: u32) -> Self {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
63 |   pub const fn new(rgba: &'a [u8], width: u32, height: u32) -> Self {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `argv`
   --> src\lib.rs:126:58
    |
126 |         .plugin(tauri_plugin_single_instance::init(|app, argv, cwd| {
    |                                                          ^^^^ help: if this is intentional, prefix it with an underscore: `_argv`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `cwd`
   --> src\lib.rs:126:64
    |
126 |         .plugin(tauri_plugin_single_instance::init(|app, argv, cwd| {
    |                                                                ^^^ help: if this is intentional, prefix it with an underscore: `_cwd`

For more information about this error, try `rustc --explain E0599`.
warning: `default` (lib) generated 3 warnings
error: could not compile `default` (lib) due to 1 previous error; 3 warnings emitted
